--- a/pipelines/kubernetes_pipeline.yaml
+++ b/pipelines/kubernetes_pipeline.yaml
@@ -26,7 +26,7 @@ stages:
 
           - task: Docker@2
             inputs:
-              containerRegistry: $(ACR_SERVICE_CONNECTION)
+              containerRegistry: $(acrServiceConnection)
               repository: $(IMAGE_NAME)
               command: 'buildAndPush'
               buildContext: '.'
