--- a/pipelines/kubernetes_pipeline.yaml
+++ b/pipelines/kubernetes_pipeline.yaml
@@ -27,7 +27,7 @@ stages:
           - task: Docker@2
             inputs:
               containerRegistry: $(acrServiceConnection)
-              repository: $(IMAGE_NAME)
+              repository: $(imageName)
               command: 'buildAndPush'
               buildContext: '.'
               dockerfile: 'AdoWeatherService/Dockerfile'
