--- a/pipelines/kubernetes_pipeline.yaml
+++ b/pipelines/kubernetes_pipeline.yaml
@@ -6,7 +6,6 @@ pool:
    name: "MySelfHostedAgent"
 
 # If you use hosted agent from Azure, uncomment this delete pool above
-
 # pool:
 #      vmImage: 'ubuntu-latest'
 
@@ -27,7 +26,7 @@ stages:
             displayName: 'Login + Docker Build+Push'
             inputs:
               azureSubscription: $(azureServiceConnection)
-              scriptType: 'pscore'  # Use PowerShell Core instead of Bash
+              scriptType: 'pscore' 
               scriptLocation: 'inlineScript'
               inlineScript: |
                 az acr login --name $(acrName)
@@ -62,7 +61,7 @@ stages:
                   displayName: Apply Config to AKS
                   inputs:
                     azureSubscription: $(azureServiceConnection)
-                    scriptType: 'pscore'  # Use PowerShell Core instead of Bash
+                    scriptType: 'pscore'
                     scriptLocation: 'inlineScript'
                     inlineScript: |
                       az aks get-credentials --name $('aks-' + '$(appName)') --resource-group $(resourceGroup) --overwrite-existing
