--- a/kubernetes/namespace.yaml
+++ b/kubernetes/namespace.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: adoweather-namespace
+  name: blade-namespace
   labels:
-    name: adoweather-namespace
+    name: blade-namespace
