--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: adoweather-service
-  namespace: adoweather-namespace
+  name: blade-service
+  namespace: blade-namespace
 spec:
   type: LoadBalancer
   selector:
-    app: adoweather
+    app: blade
   ports:
     - protocol: TCP
       port: 80
